--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <link href="/">
         <link rel="apple-touch-icon" href="/">
         <title>DSPool's developer docs</title>
+        <link href="/dist/output.css" rel="stylesheet">
         <meta property="og:url" content="https://docs.dspool.io">
         <meta property="og:title" content="DSPool Docs">
         <meta name="description" content="The DSPool docs provides information about data service including IPFS, Decentralized storage,etc.">
         <body>
-            <h1>Welcome...</h1>
+            <h1 class="text-3xl font-bold underline">
+                Hello world!
+              </h1>
         </body>
     </head>
 </html>
