fixed the path of svg file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="card-body">
                           <h5 class="card-title">Coming soon</h5>
-                          <p class="card-text">Thanks for you support,We'll come back ASAP.</p>
+                          <p class="card-text">Thanks for your support,We'll come back ASAP.</p>
                           <!-- <a href="#" class="btn btn-primary">Learn</a> -->
                           <br/>
                         </div>
